# bank-pd

./: .env.example  .gitignore  CLAUDE.md  NOTES.md  README.md  pyproject.toml  requirements.txt
bankpd/: __init__.py  _overlay.py  bbg.py  cli.py  compute.py  compute_merton_dtd.py  config.py  crsp.py  db.py  diagnostics.py  fred.py  freshness.py  linker.py  merton_pd_from_paper.py  pipeline.py  weekly.py  y9c.py  yfdata.py
docs/: architecture.md
notebooks/: boa_verify.py  compare_to_authors.py
tests/: test_smoke.py
